--- a/amazon.html
+++ b/amazon.html
@@ -55,6 +55,6 @@
       <div class="products-grid js-product-grid"></div>
     </div>
       
-      <script type="module" src="./scripts/amazon.js"></script>
+      <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
